handle network error in DocumentStoreClient + tests